Mon deuxième commit copy Studi

--- a/index-studi.html
+++ b/index-studi.html
@@ -97,7 +97,7 @@
         </div>
 
         <div>
-          <img src="images/studiPageLogin.JPG" alt="Studi Page Login">
+          <img src="images/studiPageLogin.png" alt="Studi Page Login">
         </div>
       </div>
     </div>
